# codex-jp-harness

./: .gitattributes  .gitignore  .gitleaksignore  .mailmap  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gitleaks.yml  sanitize.yml  test.yml
config/: agents_rule.md  agents_rule_lite.md  banned_terms.yaml  hooks.example.json
docs/: ARCHITECTURE.md  DEPRECATION.md  HOOKS.md  INSTALL.md  OPERATIONS.md
hooks/: bench.ps1  bench.sh  session-start-reeducate.ps1  session-start-reeducate.sh  stop-finalize-check.ps1  stop-finalize-check.sh
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
skills/jp-harness-tune/: SKILL.md  skill.md
src/codex_jp_harness/: __init__.py  discover.py  metrics.py  rules.py  server.py  stats.py  tune.py
src/ja_output_harness/: __init__.py  discover.py  metrics.py  rules.py  rules_cli.py  server.py  stats.py  toggle.py  tune.py
tests/: test_discover.py  test_metrics.py  test_rules.py  test_rules_cli.py  test_server.py  test_stats_ab_report.py  test_stats_scan_sessions.py  test_toggle.py  test_tune.py  test_user_override.py  test_version_sync.py
tests/fixtures/: bad_samples.md  codex_actual_output.txt  codex_after_strengthened.txt  codex_after_voicevox.txt  good_samples.md
