[project]
name = "codex-jp-harness"
version = "0.1.3"
description = "Codex CLI Japanese output quality gate via MCP finalize server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "sora", email = "noreply@example.com" }
]
keywords = ["codex", "mcp", "japanese", "lint", "quality-gate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
codex-jp-tune = "codex_jp_harness.tune:main"

[project.urls]
Homepage = "https://github.com/sora-bluesky/codex-jp-harness"
Repository = "https://github.com/sora-bluesky/codex-jp-harness"
Issues = "https://github.com/sora-bluesky/codex-jp-harness/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_jp_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
