[project]
name = "codex-jp-harness"
version = "0.2.14"
description = "Codex CLI Japanese output quality gate via MCP finalize server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "sora", email = "noreply@example.com" }
]
keywords = ["codex", "mcp", "japanese", "lint", "quality-gate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
codex-jp-tune = "codex_jp_harness.tune:main"
codex-jp-stats = "codex_jp_harness.stats:main"

[project.urls]
Homepage = "https://github.com/sora-bluesky/codex-jp-harness"
Repository = "https://github.com/sora-bluesky/codex-jp-harness"
Issues = "https://github.com/sora-bluesky/codex-jp-harness/issues"

[dependency-groups]
# PEP 735 dependency group. `uv sync` installs this automatically by default,
# so contributors get pytest / ruff / pytest-cov without remembering an
# `--extra dev` flag. Install `pip install -e '.[dev]'` still works because
# the [project.optional-dependencies] mirror below keeps the extras wire
# compatible for pip users who don't read uv docs.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_jp_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
